--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+/*!
+  Author: Fernando Porazzi | nTI - FACCAT
+*/
+
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -74,7 +78,7 @@ p {
   height: 60px;
   width: 60px;
   border-radius: 100%;
-  background: #16D587;
+  background: #16D587 url(../img/ui/phone.png) no-repeat center center;
   margin: 12px auto;
 }
 
